commit kra h dekh kr bta

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type=" text/css" href="style.css">
 </head>
 <body>
+   
+    <!-- dekh commet daala h -->
     <div class="wrapper">
         <div class="card">
             <img src="img3.jpg" alt="">
