Add lorem index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="card">
             <img src="img3.jpg" alt="">
             <div class="info">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi provident eaque sequi? Est perferendis dolores, temporibus voluptas adipisci similique porro!</p>
                 <h1>Course1</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, optio! Sequi eius beatae, possimus, soluta illo ipsa voluptatibus corporis id voluptates aliquid ut delectus laborum ex quidem eos eum magnam.
                 </p>
