--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Course1</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, optio! Sequi eius beatae, possimus, soluta illo ipsa voluptatibus corporis id voluptates aliquid ut delectus laborum ex quidem eos eum magnam.
                 </p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Read More for more information</a>
             </div>
         </div>
 
